# docs/swagger.yaml
@@ -124,7 +124,7 @@ definitions:
       rating:
         type: number
     type: object
-host: golang-shopee-clone-production.up.railway.app
+host: localhost:8080
 info:
   contact:
     email: support@swagger.io
@@ -336,5 +336,5 @@ paths:
       tags:
       - products
 schemes:
-- https
+- http
 swagger: "2.0"
